2009-05-29 13:40  rsbivand

	* DESCRIPTION: don't assign residuals when fit points given

2009-05-29 13:34  rsbivand

	* R/gwr.R: don't assign residuals when fit points given

2009-04-19 11:53  rsbivand

	* DESCRIPTION, R/gwr.R: added ommitted n*log(2*pi) term in AICc.b

2009-03-24 12:53  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-03-24 09:40  rsbivand

	* DESCRIPTION, R/gwr.whole.test.R: R version >= 2.6

2009-01-16 10:38  rsbivand

	* DESCRIPTION, R/gwr.R, man/gwr.Rd, ChangeLog, inst/ChangeLog:
	  fixing rss

2009-01-13 20:15  rsbivand

	* ChangeLog, DESCRIPTION, R/gwr.R, inst/ChangeLog: move rss outside
	  if()

2008-10-02 17:04  rsbivand

	* R/gwr.R: correcting DF order

2008-08-07 18:59  rsbivand

	* ChangeLog, DESCRIPTION, INDEX, R/gwr1.R, inst/ChangeLog,
	  man/ggwr.Rd: ggwr residual types

2008-06-23 10:28  rsbivand

	* ChangeLog, DESCRIPTION, R/gwr.R, R/gwr.cv.R, R/zzz.R,
	  inst/ChangeLog, man/gwr.Rd, man/gwr.cv.Rd: 0.5-3 release

2008-06-19 06:09  rsbivand

	* R/: gwr.R, gwr1.R: spurious gwr.e

2008-06-15 03:47  rsbivand

	* DESCRIPTION, INDEX, R/gwr.whole.test.R: bug in single coefficient
	  tests

2008-02-18 20:43  rsbivand

	* DESCRIPTION, R/gwr.R, R/gwr.cv.R, R/gwr.gauss.R, R/gwr1.R,
	  R/gwr1.cv.R, R/zzz.R, man/ggwr.Rd, man/ggwr.sel.Rd, man/gwr.Rd,
	  man/gwr.bisquare.Rd, man/gwr.cv.Rd, man/gwr.gauss.Rd, ChangeLog:
	  RMSE and gwr.Gauss fixes, note default kernel changed and default
	  CV score changed

2007-10-31 14:39  rsbivand

	* DESCRIPTION, R/gwe.R, R/gwr.R, R/gwr1.R, man/gw.cov.Rd,
	  man/gwr.Rd, ChangeLog, inst/ChangeLog: thingy to slot

2007-09-04 14:55  rsbivand

	* ChangeLog, inst/ChangeLog: Changelog

2007-08-23 11:16  rsbivand

	* ChangeLog, R/gwr.whole.test.R, inst/ChangeLog, man/gw.adapt.Rd:
	  weights

2007-08-23 09:41  rsbivand

	* ChangeLog, DESCRIPTION, INDEX, R/gwr.R, R/gwr.whole.test.R,
	  inst/ChangeLog, man/gwr.Rd: gwr weights

2007-08-08 20:41  rsbivand

	* DESCRIPTION, R/gwr.whole.test.R: df1 in BFC99
