@@ -1,3 +1,11 @@
+2009-05-31 20:24  rsbivand
+
+	* DESCRIPTION, R/gwr.R, man/gwr.Rd: adding prediction to gwr()
+
+2009-05-29 15:54  rsbivand
+
+	* ChangeLog, inst/ChangeLog: tidy
+
 2009-05-29 13:40  rsbivand
 
 	* DESCRIPTION: don't assign residuals when fit points given
